# desafio-recall-api-precatorios

./: .env.example  .gitignore  DECISIONS.md  README.md  pyproject.toml  requirements.txt
documentos/: 0023456-81.2018.8.16.0000.txt  0028934-17.2017.8.16.0000.txt  0037291-55.2019.8.16.0000.txt  0041872-33.2020.8.16.0000.txt  0051203-09.2021.8.16.0000.txt  teste-backend-pleno.md
src/: __init__.py  database.py  document_extraction.py  document_parser.py  domain.py  main.py  models.py  rpa.py  schemas.py  services.py
src/routers/: fila.py  precatorios.py  rpa.py
tests/: test_api.py  test_document_extraction.py  test_document_parser.py  test_rpa.py
